--- a/assignment/bsong.html
+++ b/assignment/bsong.html
@@ -4,11 +4,15 @@
 	<title>Song title</title>
 </head>
 <body>
-	<h1><img src="record.png"></h1>
-    <img src="love.png">
-    <img src="single.png">
+	<center>
+	<h1><img src="right.png"></h1>
+	<img src="thumbsup.gif" width=350>
+	<br>
+    <a href="wrong.html"><img src="love.png">
+    <a href="yesb.html"><img src="single.png">
     <br>
-    <img src="run.png">
-    <img src="crazy.png">
+    <a href="wrong.html"><img src="run.png">
+    <a href="wrong.html"><img src="crazy.png">
+</center>
 
 </body>
