--- a/assignment/artist.html
+++ b/assignment/artist.html
@@ -4,11 +4,15 @@
 	<title>Artist</title>
 </head>
 <body>
-	<img src="beyonce.png">
-	<a href="beyonce.html"></a>
-	<img src="rihanna.png">
+	<center>
+		<h1>
+			<img src="fan.png">
+			<br>
+	<a href="beyonce.html"><img src="beyonce.png">
+	<a href="rihanna.html"><img src="rihanna.png">
 	<br>
-	<img src="drake.png">
-	<img src="chrisb.png">
+	<a href="drake.html"><img src="drake.png">
+	<a href="chrisb.html"><img src="chrisb.png">
+	</center>
 </body>
 </html>
