--- a/assignment/beyonce.html
+++ b/assignment/beyonce.html
@@ -4,10 +4,13 @@
 	<title>beyonce</title>
 </head>
 <body>
-	<h1><img src="bgif.gif"></h1>
-	<img src="kcq.png">
-	<img src="qnq.png">
+	<center>
+	<h1><img src="clue.png" width=200></h1>
+	<h2><img src="ring.gif" width=320></h2>
+	<a href="wrong2.html"><img src="kcq.png">
+	<a href="wrong.html"><img src="qnq.png">
 	<br>
-	<img src="bq.png">
-	<img src="rq.png">
+	<a href="bsong.html"><img src="bq.png">
+	<a href="wrong.html"><img src="rq.png">
+	</center>
 </body>
