--- a/assignment/bsong.html
+++ b/assignment/bsong.html
@@ -11,8 +11,7 @@
     <a href="wrong.html"><img src="love.png">
     <a href="yesb.html"><img src="single.png">
     <br>
-    <a href="wrong.html"><img src="run.png">
-    <a href="wrong.html"><img src="crazy.png">
+    <a href="wrong2.html"><img src="run.png">
+    <a href="wrong2.html"><img src="crazy.png">
 </center>
-
 </body>
