--- a/assignment/csong.html
+++ b/assignment/csong.html
@@ -8,7 +8,7 @@
 	<h1><img src="right.png"></h1>
 	<img src="thumbsup.gif" width=350>
 	<br>
-	<a href="wrong.html"><img src="kiss.png">
+	<a href="wrong2.html"><img src="kiss.png">
 	<a href="wrong.html"><img src="gimme.png">
 	<br>
 	<a href="wrong.html"><img src="bye.png">
