--- a/assignment/rihanna.html
+++ b/assignment/rihanna.html
@@ -8,9 +8,9 @@
 	<h1><img src="clue.png" width=200></h1>
 	<h1><img src="umbrella.gif"></h1>
 	<a href="wrong.html"><img src="mcq.png">
-	<a href="wrong.html"><img src="kcq2.png">
+	<a href="wrong2.html"><img src="kcq2.png">
 	<br>
-	<a href="wrong.html"><img src="bq2.png">
+	<a href="wrong2.html"><img src="bq2.png">
 	<a href="rsong.html"><img src="ririq.png">
 </center>
 </body>
