--- a/poster/index.html
+++ b/poster/index.html
@@ -11,16 +11,19 @@
 	<h1> IVY PARK </h1>
 	<h2> IVY PARK </h2>
 	<h3> FASHION SHOW</h3>
-	<h4> MAY 03 8PM-12AM</h4>
+	<h4> October 19, 2020</h4>
+	<h5> 8:00pm-12:00am</h5>
+	<h6> Admission $500</h6>
+	<h8> AGES 18+ </h8>
+	<div class="line"></div>
 	<div class="Location"> Madison Square Graden</div>
 	<div class="line"></div>
+	<div class="line2"></div>
 	<p>
 		Staples Center 
-		<br>
 		1111 S Figueroa St
-		<br>
 		Los Angeles, CA 90015
-
-	</p>
+    </p>
+	
 </body>
 	</html>
