--- a/Collection/index.html
+++ b/Collection/index.html
@@ -5,39 +5,28 @@
  <link rel="styleSheet" href="style.css"> 
 </head>
 <body>
-	<h1> Shadow Photogrpahy </h1>
-	<a href="http://www.greglotus.com/"><img src="shadow1.jpg" width= 200>
-	
-	<img src="shadow2.jpg" width= 200>
-	
-	<a href="https://lucien-clergue.com/en/"><img src="shadow3.jpg" width= 200>
-	
-	<a href="https://wendyhopephotography.com/"><img src="shadow4.jpeg" width= 200>
-	
-	<a href="https://lucien-clergue.com/en/"><img src="shadow5.jpeg" widht=200>
-	
-	<a href="https://emiliojimenez.es/"><img src="shadow6.jpeg" width=200>
-	
-	<a href="http://www.solvesundsbo.com/"><img src="shadow7.jpeg" width=200>
-	
-	<a href="https://huxleyparlour.com/artists/herb-ritts/"><img src="shadow8.jpeg" width=200>
-	
-	<a href="https://lucien-clergue.com/en/"><img src="shadow9.jpeg" width=200>
-	
-	<a href="https://wendyhopephotography.com/"><img src="shadow10.jpeg" width=200>
-
-	<img src="shadow11.jpeg" width=200>
-	<img src="shadow12.jpeg" width=200>
-	<img src="shadow13.jpeg" width=200>
-	<a href="https://www.francisgiacobetti.com/"><img src="shadow14.jpg" width=200>
-
-	<img src="shadow15.jpg" width=200>
-	<img src="shadow16.jpg" width=200>
-	<img src="shadow17.gif" width=200>
-	<img src="shadow18.jpg" width=200>
-	<img src="shadow19.jpeg" width=200>
-
-	<div class="relative-shadow1"></div>
+	<div class="relative-box"></div>
+    <h1>Shadow Photography</h1>
+    <a href="aboutus.html"><h2>Photographers</h2></a>
+    <a href="http://www.greglotus.com/"><div class="shadow s1"></div></a>
+	<a href="https://lucien-clergue.com/en/"><div class="shadow s2"></div></a>
+	<a href="https://wendyhopephotography.com/"><div class="shadow s4"></div></a>
+	<a href="https://lucien-clergue.com/en/"><div class="shadow s5"></div></a>
+	<a href="https://emiliojimenez.es/"><div class="shadow s6"></div></a>
+    <a href="http://www.solvesundsbo.com/"><div class="shadow s7"></div></a>
+	<a href="https://www.herbritts.com/"><div class="shadow s8"></div></a>
+	<a href="https://lucien-clergue.com/en/"><div class="shadow s9"></div></a>
+	<a href="https://wendyhopephotography.com/"><div class="shadow s10"></div></a>
+	<a href="https://chris-maher.pixels.com/"><div class="shadow s11"></div></a>
+	<div class="shadow s12"></div>
+	<div class="shadow s13"></div>
+	<a href="https://www.francisgiacobetti.com/"><div class="shadow s14"></div></a>
+	<a href="https://500px.com/p/vladimirzotov?view=photos"><div class="shadow s15"></div></a>
+	<a href="https://neilsnape.com/"><div class="shadow s16"></div></a>
+	<a href="https://www.deviantart.com/cenevols"><div class="shadow s17"></div></a>
+    <a href="https://cherrydeck.com/Oscarvisual"><div class="shadow s18"></div></a>
+	<div class="shadow s19"></div>
+	<div class="line1"></div>
 </body>
  
  </html>
